--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html>
 <head>
-<title>My El Centro Page</title>
-</head>
-<body>
 
-<h1>My Web Class for Fall 2020</h1>
-<p>More to follow...</p>
+<meta charset="UTF-8">
+<title>Index</title>
+
+</head>
+
+<body>
+<div>
+<a href="https://github.com/Lizzet4/StockVariables">Stock Variables</a><br>
+<a href="https://github.com/Lizzet4/NumberCheck/blob/main/NumbersCheck.html">Number Check</a><br>
+<a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">Area Codes</a><br>
+<a href="https://github.com/Lizzet4/myCanvas/blob/main/Canvas.html">Canvas</a><br>
+<a href="https://github.com/Lizzet4/jQuery/blob/main/jQuery.html">jQuery Stuff</a><br>
+<a href="https://github.com/Lizzet4/jQueryEvent/blob/main/jQuery.html">jQuery Events and Effects</a>
+</div>
 
 </body>
 </html>
