--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://github.com/Lizzet4/StockVariables">Stock Variables</a><br>
 <a href="https://github.com/Lizzet4/NumberCheck/blob/main/NumbersCheck.html">Number Check</a><br>
 <a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">Area Codes</a><br>
-<a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">My Canvas</a><br>
+<a href="https://github.com/Lizzet4/lizzet4.github.io/blob/master/Canvas.html">My Canvas</a><br>
 <a href="https://github.com/Lizzet4/jQuery/blob/main/jQuery.html">jQuery Stuff</a><br>
 <a href="https://github.com/Lizzet4/jQueryEvent/blob/main/jQuery.html">jQuery Events and Effects</a>
 </div>
