--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
 <div>
-<a href="https://github.com/Lizzet4/StockVariables">Stock Variables</a><br>
-<a href="https://github.com/Lizzet4/NumberCheck/blob/main/NumbersCheck.html">Number Check</a><br>
-<a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">Area Codes</a><br>
+<a href="https://lizzet4.github.io/StockVariables.html">Stock Variables</a><br>
+<a href="https://lizzet4.github.io/NumbersCheck.html">Number Check</a><br>
+<a href="https://lizzet4.github.io/AreaCodes.html">Area Codes</a><br>
 <a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">Questionaire</a><br>
-<a href="https://github.com/Lizzet4/lizzet4.github.io/blob/master/Canvas.html">My Canvas</a><br>
-<a href="https://github.com/Lizzet4/jQuery/blob/main/jQuery.html">jQuery Stuff</a><br>
-<a href="https://github.com/Lizzet4/jQueryEvent/blob/main/jQuery.html">jQuery Events and Effects</a>
+<a href="https://lizzet4.github.io/Canvas.html">My Canvas</a><br>
+<a href="https://lizzet4.github.io/jqueryStuff.html">jQuery Stuff</a><br>
+<a href="https://lizzet4.github.io/jQuery.html">jQuery Events and Effects</a>
 </div>
 
 </body>
