--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://lizzet4.github.io/StockVariables.html">Stock Variables</a><br>
 <a href="https://lizzet4.github.io/NumbersCheck.html">Number Check</a><br>
 <a href="https://lizzet4.github.io/AreaCodes.html">Area Codes</a><br>
-<a href="https://github.com/Lizzet4/NumberCheck/blob/main/AreaCodes.html">Questionaire</a><br>
+<a href="https://lizzet4.github.io/jQuery.html">Questionaire</a><br>
 <a href="https://lizzet4.github.io/Canvas.html">My Canvas</a><br>
 <a href="https://lizzet4.github.io/jqueryStuff.html">jQuery Stuff</a><br>
 <a href="https://lizzet4.github.io/jQuery.html">jQuery Events and Effects</a>
