--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <div>
 <a href="https://lizzet4.github.io/StockVariables.html">Stock Variables</a><br>
+<a href="https://lizzet4.github.io/FortuneTeller.html">Fortune Teller</a><br>
 <a href="https://lizzet4.github.io/NumbersCheck.html">Number Check</a><br>
 <a href="https://lizzet4.github.io/AreaCodes.html">Area Codes</a><br>
 <a href="https://lizzet4.github.io/jQuery.html">Questionaire</a><br>
